projects/vb6parse/snapshots/tests/library/string/chrw_dollar/chrw_dollar_international_chars.snap
---
source: projects/vb6parse/tests/library/string/chrw_dollar.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetGreeting
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: GetGreeting
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Gr\""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: ChrW$
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "252"
                                - kind: RightParenthesis
                                  text: )
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: ChrW$
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "223"
                            - kind: RightParenthesis
                              text: )
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\" Gott\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
